--- a/company-website/css/style.css
+++ b/company-website/css/style.css
@@ -1,28 +1,106 @@
-.pageLink {
-  text-decoration: none;
-  font-size: 16px;
-  color: rgb(10, 99, 158);
-  border: 1px solid rgb(11, 132, 212);
-  display: inline-block;
-  padding: 10px;
-  margin-left: 20px;
-  border-radius: 5px;
-  min-width: 80px;
-  text-align: center;
-}
-
-.header {
-  background-image: url("../images/bg.jpg");
-  min-height: 150px;
-  color: #ffffff;
-  padding: 20px;
-  margin-bottom: 20px;
-  background-position: left;
-}
-
-html,
-body {
+*{
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
+  box-sizing: border-box;
 }
+body{
+  font-family: sans-serif;
+  height: 3000px;
+}
+/* ------------------------------------------------------- */
+header{
+  padding: 40px 0px;  
+}
+.container{
+  width: 90%;
+  margin: auto;
+}
+.headContent{
+  display: flex;
+  align-items: center;
+  height: 100px;
+  position: fixed;
+  background-color:rgba(2, 7, 17, 0.7);
+  left:0px;
+  top: 0;
+  right: 0;
+}
+.headContent nav {
+  flex: 5;
+  text-align: center;
+}
+.headContent img{
+  flex:1;
+  max-width: 100px;
+  border-radius: 50%;
+  padding: 5px;
+  margin-left: 20px;
+}
+.pageLink {
+  position: relative;
+  display:inline-block;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: rgb(253, 251, 251);
+  font-size: 18px;
+}
+.pageLink::before,.pageLink::after{
+  content: " ";
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-style:solid ;
+  transition: 0.5s;
+  
+}
+.pageLink::before{
+  border-width: 0px 2px;
+  height: 100%;
+  width: 95%;
+  transform: scale3d(1,0,1);
+  transform-origin: left;
+ 
+}
+.pageLink::after{
+  border-width: 2px 0px;
+  height: 91%;
+  width: 98%;
+  transform: scale3d(0,1,1);
+
+}
+.pageLink:hover:before,.pageLink:hover::after{
+  transform: scale3d(1,1,1);
+}
+
+
+
+
+.home{
+  padding-top: 100px;
+  margin: 50px;
+}
+
+
+
+
+/* ------------ourteam--------------------- */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 300px;
+  display: inline-block;
+  padding: 10px;
+  margin: 40px;
+
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.card img{
+  width:300px;
+   height: 250px;
+}
+
+
