--- a/company-website/css/style.css
+++ b/company-website/css/style.css
@@ -5,7 +5,6 @@
 }
 body{
   font-family: sans-serif;
-  height: 3000px;
 }
 /* ------------------------------------------------------- */
 header{
@@ -13,7 +12,9 @@ header{
 }
 .container{
   width: 90%;
-  margin: auto;
+  margin: 20px;
+  padding: 20px;
+
 }
 .headContent{
   display: flex;
@@ -102,5 +103,38 @@ header{
   width:300px;
    height: 250px;
 }
+
+/* ------------------about----------------------- */
+.habout{
+  font-size:30px;
+  color: rgb(112, 32, 32);
+}
+.about{
+  width: 45%;
+  margin: 20px;
+  padding: 30px;
+  text-align: center;
+  border: 2px solid brown;
+  border-radius: 20px;
+  background-color: rgba(105, 20, 20, 0.2);
+  font-family: cursive; 
+  line-height: 40px;
+  display: inline-block;
+}
+.pabout{
+  color: rgb(56, 2, 2);
+}
+.aboutimg{
+  padding: 20px;
+  margin: 20px;
+  float: right;
+  width: 45%;
+  height: 350px;
+  border-radius: 50px;
+}
+
+
+
+/* ---------------------------------footer------------------------------- */
 
 
