--- a/company-website/css/style.css
+++ b/company-website/css/style.css
@@ -5,10 +5,7 @@
 }
 body{
   font-family: sans-serif;
-}
-/* ------------------------------------------------------- */
-header{
-  padding: 40px 0px;  
+  background: rgba(212, 191, 175,0.5);
 }
 .container{
   width: 90%;
@@ -16,12 +13,16 @@ header{
   padding: 20px;
 
 }
+/* ------------------------------------------------------- */
+header{
+  padding: 40px 0px;  
+}
 .headContent{
   display: flex;
   align-items: center;
   height: 100px;
   position: fixed;
-  background-color:rgba(2, 7, 17, 0.7);
+  background-color: rgb(92, 73, 61,0.7);
   left:0px;
   top: 0;
   right: 0;
@@ -73,16 +74,12 @@ header{
 .pageLink:hover:before,.pageLink:hover::after{
   transform: scale3d(1,1,1);
 }
-
-
-
+/* ---------------------------home------------------------- */
 
 .home{
   padding-top: 100px;
   margin: 50px;
 }
-
-
 
 
 /* ------------ourteam--------------------- */
@@ -103,6 +100,14 @@ header{
   width:300px;
    height: 250px;
 }
+.cont a i{
+  text-decoration: none;
+  font-size: 22px;
+  color: rgb(2, 2, 57);
+  margin: 0px 10px 0px 10px;
+  padding:0px 10px 0px 10px;
+  font-weight: bold;
+}
 
 /* ------------------about----------------------- */
 .habout{
@@ -114,9 +119,9 @@ header{
   margin: 20px;
   padding: 30px;
   text-align: center;
-  border: 2px solid brown;
+  border: 2px solid #847062;
   border-radius: 20px;
-  background-color: rgba(105, 20, 20, 0.2);
+  background-color:#cead94 ;
   font-family: cursive; 
   line-height: 40px;
   display: inline-block;
@@ -133,8 +138,101 @@ header{
   border-radius: 50px;
 }
 
-
-
 /* ---------------------------------footer------------------------------- */
+.footer{
+ text-align: center;
+ background-color: #42352c ;
+ height:300px;
+ margin: 0;
+ padding: 0;
+}
+.footcontent{
+  display: inline-block;
+  padding:20px 50px 0 50px;
+  margin:0 50px 0 40px;
+  text-align: center;
+  color:whitesmoke;
+
+}
+.link{
+  display: block;
+  text-decoration: none;
+  color: rgb(249, 246, 246);
+}
+.copy{
+  text-align: center;
+  display: block;
+  color: gray;
+  margin-top: 70px;
+}
+.a12{
+  display: inline;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  color:white;
+  font-size: 25px;
+  }
+
+  /* -----------------------------projects----------------------- */
+  .plist{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+.plist li{
+    margin: 15px 15px;
+}
+.plist li a{
+  text-decoration: none;
+  color: rgb(101, 41, 41);
+  font-size: 20px;
+  font-weight: bold;
+  font-family: cursive; 
+}
+.Pitems{
+  display: grid;
+    grid-gap:20px;
+    margin:0px 30px 0px 30px;
+    grid-template-columns:repeat(3 , 1fr);
+    padding: 30px;
+}
+.projects{
+  justify-content: center;
+  padding-left: 60px;
+}
+/* -------------------------ContactUs------------------- */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #06015f;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.contact {
+  border-radius: 5px;
+  background-color:#947b69;
+  padding: 20px;
+  margin:auto;
+  width: 50%;
+  
+}
 
 
