--- a/company-website/css/style.css
+++ b/company-website/css/style.css
@@ -77,8 +77,51 @@ header{
 /* ---------------------------home------------------------- */
 
 .home{
-  padding-top: 100px;
-  margin: 50px;
+  background-image: url(../images/hall2.jpeg);
+  height: 100vh;
+  background-position:cover;
+  position: relative;
+}
+.overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0 ;
+  left: 0;
+  background-color:rgba(0, 0,0,0.7);
+}
+.hocontent{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%  ,  -50% );
+  text-align: center;
+  width: 70%;
+}
+.H{
+  color: white;
+  font-size: 55px;
+}
+.Par{
+  color:rgb(255, 235, 205);
+ line-height: 1.5px;
+  margin-top: 20px ;
+  margin-bottom:18px;
+  letter-spacing: 2px;
+}
+.btn{
+  font-size: 18px;
+  cursor: pointer;
+  padding: 15px 0px ;
+  border-radius: 5px;
+  border: 0;
+  width: 150px;
+}
+.btn1{
+  margin-right: 8px;    
+}
+.btn:hover {
+  opacity:0.7;
 }
 
 
