--- a/company-website/css/style.css
+++ b/company-website/css/style.css
@@ -81,9 +81,9 @@ header{
   height: 100vh;
   background-position:cover;
   position: relative;
+  z-index: -1;
 }
 .overlay{
-  position: absolute;
   width: 100%;
   height: 100%;
   top: 0 ;
@@ -100,7 +100,7 @@ header{
 }
 .H{
   color: white;
-  font-size: 55px;
+  font-size: 55px; 
 }
 .Par{
   color:rgb(255, 235, 205);
@@ -108,6 +108,7 @@ header{
   margin-top: 20px ;
   margin-bottom:18px;
   letter-spacing: 2px;
+
 }
 .btn{
   font-size: 18px;
@@ -115,6 +116,7 @@ header{
   padding: 15px 0px ;
   border-radius: 5px;
   border: 0;
+
   width: 150px;
 }
 .btn1{
