--- a/compnay-react/company/src/App.css
+++ b/compnay-react/company/src/App.css
@@ -81,3 +81,31 @@
 .menu li a.active {
   color: #d63bce;
 }
+ 
+/* ------------------------Gallery------------------------------------- */
+.plist{
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+.plist li{
+  margin: 15px 15px;
+}
+.plist li a{
+text-decoration: none;
+color: rgb(101, 41, 41);
+font-size: 20px;
+font-weight: bold;
+font-family: cursive; 
+}
+.Pitems{
+display: grid;
+  grid-gap:20px;
+  margin:0px 30px 0px 30px;
+  grid-template-columns:repeat(3 , 1fr);
+  padding: 30px;
+}
+.projects{
+justify-content: center;
+padding-left: 60px;
+}
